--- a/index.html
+++ b/index.html
@@ -6,93 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="icone/icons8-fábrica-16.ico" type="image/x-icon"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Tela de Apresentação</title>
-    <style>
-        :root{
-            --color-white: #fff;
-            --color-dark1: #272727;
-            --color-dark2: #2d2d2d;
-            --color-dark3: #414141;
-            --color-dark4: #1c1c1c;
-            --color-dark5: #343434;
-            --color-purple: #b040ff;
-
-
-        }
-        *{
-            margin: 0;
-            padding: 0;
-        }
-        body{
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: var(--color-dark1);
-            color: var(--color-white);
-        }
-        .img_logo_header{
-            width: 45px;
-        }
-        .header,
-        .nagivation_header{
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-        }
-        .header{
-            background-color: var(--color-dark2);
-            box-shadow: 1px 1px 4px var(--color-dark4);
-            height: 3.5em;
-            justify-content: space-between;
-            padding: 0 5%;
-        }
-        .nagivation_header{
-            gap: 3em;
-            z-index: 2;
-        }
-        .nagivation_header a{
-            text-decoration: none;
-            color: var(--color-purple);
-            transition: 1s;
-            font-weight: bold;
-        }
-        .active{
-            background-color: var(--color-dark3);
-            padding: 10px;
-            border-radius: 10px;
-        }
-        .content{
-            text-align: center;
-            padding-top: 5em;
-            height: 100vh;
-            transition: 1s;
-        }
-        .btn_icon_header{
-            background-color:transparent;
-            border: none;
-            color: var(--color-white);
-            cursor: pointer;
-            display: none;
-        }
-        @media screen and (max-width: 768px) {
-            .btn_icon_header{
-                display: block;
-            }
-            .nagivation_header{
-                position: absolute;
-                flex-direction: column;
-                top: 0;
-                background-color: var(--color-dark5);
-                height: 100%;
-                width: 35vw;
-                padding: 1em;
-                animation-duration: 1s;
-                margin-left: -100vw;
-            }
-        }
-        @keyframes showSidebar{
-            from{margin-left: -100vw;}
-            top{margin-left: -10vw;}
-        }
-    </style>
 </head>
 <body>
     <div class="header" id="header">
@@ -110,13 +25,53 @@
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                   </svg>
             </button>
-            <a href="#" class="active">Home</a>
-            <a href="#">Banco de Dados</a>
-            <a href="#">Contato</a>
+            <a href="index.html" class="active">Home</a>
+            <a href="#" class="active">Banco de Dados</a>
+            <a href="#" class="active">Contato</a>
         </div>
     </div>
     <div tabindex="0" onclick="closeSidebar()" class="content" id="content">
-        <h1>Menu Responsivo</h1>
+        <div class="box">
+            <form action="index.html" method="POST">
+                <fieldset>
+                    <legend>Blend</legend>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="hibrido" id="hibrido" class="inputEntrada" required>
+                        <label for="hibrido" class="labelInput">Híbrido</label>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="silo" id="silo" class="inputEntrada" required>
+                        <label for="silo" class="labelInput">Silo</label>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="volume" id="volume" class="inputEntrada" required>
+                        <label for="volume" class="labelInput">Volume</label>
+                    </div>
+                    <br>
+                    <div class="inputBox">
+                        <input type="text" name="fertilidade" id="fertilidade" class="inputEntrada" required>
+                        <label for="fertilidade" class="labelInput">Fertilidade</label>
+                    </div>
+                    <br>
+                    <div>
+                        <p>Porcentagem</p>
+                        <input type="radio" class="inputRadio" name="porcentagem" id="porcentagem70" value="70%" required>
+                        <label for="porcentagem70" class="labelRadio">70%</label>
+                        <br>
+                        <input type="radio" class="inputRadio" name="porcentagem" id="porcentagem30" value="30%" required>
+                        <label for="porcentagem70" class="labelRadio">30%</label>
+                    </div>
+                    <br>
+                    <div>
+                        <input type="submit" value="submit"
+                        name="submit" id="submit">
+                    </div>
+                </fieldset>
+            </form>
+        </div>
     </div>
 </body>
 <script>
