--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@ class Produto{
         let msg = '';
         if(produto.FluxoCT == '')
         {
-            msg += '-Informe o Híbrido\n'
+            msg += '-Informe o Fluxo da CT\n'
         }
         if(produto.Porcent_Esteril == '')
         {
-            msg += '-Informe o Porcent_Esteril\n'
+            msg += '-Informe a Porcentagem\n'
         }
         if(msg != '')
         {
