--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
     <div class="header" id="header">
         <button onclick="abrirlateral()" class="btn_icon_header">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"          fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
@@ -31,12 +31,12 @@
             <a href="#" class="active">Contato</a>
         </div>
     </div>
-    <div class="titulo" tabindex="0" onclick="closeSidebar()">
-        <h1>
-            Calculo para Blend
-        </h1>
-    </div>
-    <div class="grid">
+    <div class="grid" id="grid">
+        <div class="titulo" id="titulo" tabindex="0" onclick="closeSidebar()">
+            <h1>
+                Calculo para Blend
+            </h1>
+        </div>
         <div class="box" id="box" tabindex="0" onclick="closeSidebar()">
             <form action="index.html" method="POST">
                 <fieldset>
@@ -97,6 +97,7 @@
     var navigationHeader = document.getElementById('nagivation_header');
     var content = document.getElementById('content');
     var box = document.getElementById('box');
+    var titulo = document.getElementById('titulo');
     var showSidebar = false;
 
     function abrirlateral()
@@ -105,10 +106,12 @@
         if(showSidebar){
             navigationHeader.style.marginLeft = '-10vw';
             navigationHeader.style.animationName = 'showSidebar';
+            titulo.style.filter = 'blur(2px)';
             box.style.filter = 'blur(2px)';
         }else{
             navigationHeader.style.marginLeft = '-100vw';
             navigationHeader.style.animationName = '';
+            titulo.style.filter = '';
             box.style.filter = '';
         }
     }
