--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="grid" id="grid">
         <div class="titulo" id="titulo" tabindex="0" onclick="closeSidebar()">
             <h1>
-                Calculo para Blend
+                Calculo Blend-CT
             </h1>
         </div>
         <div class="box" id="box" tabindex="0" onclick="closeSidebar()">
