--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <br>
                     <div class="inputBox">
                         <p>Qual Correia Transportadora:</p>
-                        <input type="radio" class="inputRadio" id="ct-37" name="ct" value="15" checked required><label for="ct-37" class="labelRadio">CT-37 (Debulha)</label>
+                        <input type="radio" class="inputRadio" id="ct-37" name="ct" value="20" checked required><label for="ct-37" class="labelRadio">CT-37 (Debulha)</label>
                         <br>
                         <input type="radio" class="inputRadio" id="ct-12" name="ct" value="8" required><label for="ct-12" class="labelRadio">CT-12 (Classificação)</label>
                         <br>
@@ -72,7 +72,7 @@
                         <thead class="barra_titulo">
                             <tr>
                                 <th class="center">#</th>
-                                <th class="center">Fluxo Geral</th>
+                                <th class="center">Fluxo/h</th>
                                 <th class="center">% Estéril</th>
                                 <th class="center">Kg/h</th>
                                 <th class="center">% Fértil</th>
@@ -158,7 +158,7 @@ class Produto{
             let tr = tbody.insertRow();
 
             let td_id = tr.insertCell();
-            let td_FluxoCT = tr.insertCell();
+            let td_Fluxoh = tr.insertCell();
             let td_Porcent_Esteril = tr.insertCell();
             let td_result_esteril = tr.insertCell();
             let td_result_porcent = tr.insertCell();
@@ -167,7 +167,7 @@ class Produto{
             
 
             td_id.innerText = this.arrayProdutos[i].id;
-            td_FluxoCT.innerText = this.arrayProdutos[i].FluxoCT;
+            td_Fluxoh.innerText = this.arrayProdutos[i].Fluxoh;
             td_Porcent_Esteril.innerText = this.arrayProdutos[i].Porcent_Esteril +"%";
             td_result_esteril.innerText = this.arrayProdutos[i].result_esteril;
             td_result_porcent.innerText = this.arrayProdutos[i].result_porcent +"%";
@@ -198,6 +198,9 @@ class Produto{
     
         produto.id = this.id;
         produto.FluxoCT = document.getElementById('FluxoCT').value;
+        produto.BaseCalc = Number(3600 / 2.20);
+        produto.CalcFluxo = Number(produto.FluxoCT) * Number(produto.BaseCalc);
+        produto.Fluxoh = produto.CalcFluxo.toFixed(0);
         produto.Porcent_Esteril = document.getElementById('Porcent_Esteril').value;
         produto.result_esteril = Number(produto.Porcent_Esteril) * Number(produto.FluxoCT) / 100;
         produto.result_porcent = 100 - produto.Porcent_Esteril;
